[CSS] Fix menu on mobile (#124)
* [front] fix version selector align and width

* [CSS] fix menu on mobile

* [css] fix separator on mobile

--- a/src/assets/stylesheets/layout/_header.scss
+++ b/src/assets/stylesheets/layout/_header.scss
@@ -34,6 +34,10 @@
   @media print {
     display: none;
   }
+  
+  @include break-to-device(tablet) {
+    height: 5rem;    
+  }
 }
 
 // Navigation within header
